rollingupdate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: rollingupdate
spec: {}
status: {}
