rollingupdate/rollingupdate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollingupdate-demo
  labels:
    app: rollingupdate-demo
spec:
  replicas: 10
  selector:
    matchLabels:
      app: rollingupdate-demo
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0%
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: rollingupdate-demo
    spec:
      containers:
      - name: rollingupdate-demo
        image: argoproj/rollouts-demo:green
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 3
